--- a/style.css
+++ b/style.css
@@ -3,3 +3,20 @@
     padding: 0;
     list-style: none;
 }
+
+.container {
+    width: 450px;
+    height: 450px;
+    border: 2px solid red;
+}
+
+.test-popup {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    width: 100vw;
+    height: 100vh;
+    border: 5px solid orange;
+    background-color: rgb(255, 193, 77, 0.5);
+}
