--- a/style.css
+++ b/style.css
@@ -157,4 +157,42 @@
     border-radius: 15px;
     background-color: lightgray;
     font-family: 'Lato', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.modal__header {
+    border: 1px solid red;
+    flex: 1;
+    text-align: center;
+}
+
+.modal__body {
+    border: 1px solid green;
+    flex: 3;
+}
+
+.modal__message {
+    padding: 10px;
+    overflow: hidden;
+}
+
+
+.modal__ui {
+    border: 1px solid orange;
+    flex: 1;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.modal__ui__button {
+    border: 1px solid blue;
+    max-width: 170px;
+    height: 70%;
+    flex: 1;
+    text-align: center;
+    font-size: 120%;
+    font-weight: bolder;
 }
