--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     list-style: none;
+    box-sizing: border-box;
 }
 
 .container {
@@ -16,12 +17,13 @@
     position: absolute;
     right: 0;
     z-index: 10;
+    max-width: 350px;
+    min-width: 300px;
 }
 
 .toast {
-    width: 350px;
     height: 100px;
-    margin: 10px;
+    margin: 5px;
     border: 1px solid black;
     border-radius: 15px;
     font-family: 'Lato', sans-serif;
@@ -31,7 +33,6 @@
 
 .toast__img {
     flex: 2;
-    /* border: 1px solid red; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -57,10 +58,8 @@
     overflow: hidden;
 }
 
-
 .toast__ui {
     flex: 1;
-    /* border: 1px solid red; */
 }
 
 .ui__cross {
@@ -70,7 +69,6 @@
     background-position: top;
     background-size: 40%;
     margin-top: 5px;
-    /* border: 1px solid blue; */
     transition: 0.15s;
 }
 
@@ -151,7 +149,8 @@
 }
 
 .modal {
-    width: 400px;
+    max-width: 400px;
+    width: 100%;
     height: 250px;
     border: 2px solid black;
     border-radius: 15px;
@@ -163,13 +162,11 @@
 }
 
 .modal__header {
-    border: 1px solid red;
     flex: 1;
     text-align: center;
 }
 
 .modal__body {
-    border: 1px solid green;
     flex: 3;
 }
 
@@ -178,9 +175,7 @@
     overflow: hidden;
 }
 
-
 .modal__ui {
-    border: 1px solid orange;
     flex: 1;
     display: flex;
     justify-content: space-evenly;
@@ -188,11 +183,29 @@
 }
 
 .modal__ui__button {
-    border: 1px solid blue;
+    border: 1px solid black;
+    border-radius: 5px;
     max-width: 170px;
     height: 70%;
+    max-height: 50px;
     flex: 1;
     text-align: center;
     font-size: 120%;
     font-weight: bolder;
+}
+
+.modal__ui__button:hover {
+    filter: brightness(120%);
+}
+
+.modal__ui__button:active {
+    filter: brightness(80%);
+}
+
+@media screen and (max-width: 500px) {
+    .modal {
+        width: 100vw;
+        height: 100vh;
+        font-size: 120%;
+    }
 }
