--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .toast__space {
-    position: absolute;
+    position: fixed;
     right: 0;
     top: 0;
     z-index: 10;
@@ -135,7 +135,7 @@ body {
 }
 
 .modal__shadow {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 10;
