--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     right: 0;
     top: 0;
     z-index: 10;
-    max-width: 350px;
+    width: 315px;
     min-width: 300px;
 }
 
@@ -70,7 +70,6 @@ body {
     background-size: 40%;
     margin-top: 5px;
     transition: 0.15s;
-    
 }
 
 .ui__cross:hover {
@@ -218,4 +217,43 @@ body {
 .test-button {
     width: 100px;
     height: 30px;
+}
+
+@keyframes mySlide {
+    0% {
+        margin: initial;
+    }
+
+    50% {
+        margin-top: -200px;
+    }
+
+    100% {
+        display: none
+    }
+}
+
+@keyframes scale {
+	0% {
+		display: inline-flex;
+		opacity: 1;
+		transform: scale(1);
+		-webkit-transform: scale(1);
+	}
+	99% {
+		display: inline-flex;
+		opacity: 0;
+		transform: scale(0);
+		-webkit-transform: scale(0);
+	}
+	100% {
+		display: none;
+		opacity: 0;
+		transform: scale(0);
+		-webkit-transform: scale(0);
+	}
+}
+
+.hide_1 {
+    animation: scale 0.6s linear;
 }
