--- a/style.css
+++ b/style.css
@@ -219,21 +219,7 @@ body {
     height: 30px;
 }
 
-@keyframes mySlide {
-    0% {
-        margin: initial;
-    }
-
-    50% {
-        margin-top: -200px;
-    }
-
-    100% {
-        display: none
-    }
-}
-
-@keyframes scale {
+@keyframes popup-scale-0 {
 	0% {
 		display: inline-flex;
 		opacity: 1;
@@ -254,6 +240,31 @@ body {
 	}
 }
 
-.hide_1 {
-    animation: scale 0.5s linear;
+@keyframes popup-scale-1 {
+	0% {
+        display: none;
+		opacity: 0;
+		transform: scale(0);
+		-webkit-transform: scale(0);
+	}
+	99% {
+		display: inline-flex;
+		opacity: 0;
+		transform: scale(0);
+		-webkit-transform: scale(0);
+	}
+	100% {
+		display: inline-flex;
+		opacity: 1;
+		transform: scale(1);
+        -webkit-transform: scale(1);
+	}
+}
+
+.popup__hide {
+    animation: popup-scale-0 0.5s linear;
+}
+
+.popup__show {
+    animation: popup-scale-1 0.5s linear;
 }
